# Anzaku-s-Invoice-Agent

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
app/: __init__.py  api_server.py  browser.py  config.py  main.py
app/audit/: logger.py
app/invoices/: __init__.py  parser.py
app/memory/: __init__.py  store.py
app/portals/: __init__.py  base.py  orange.py
docs/: architecture.md  roadmap.md  user-flow.md
frontend/: app.js  index.html  mock-data.js  styles.css
