[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-invoice-agent"
version = "0.1.0"
description = "Frontend-first prototype and local Python scaffold for an AI invoice agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]
